# Doqu

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bugfix.md  new-feature.md  new_feature.md
alembic/: env.py  script.py.mako
backend/: .env.example  .flake8  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 84d99442d033_initial_migration.py  89f2d9a6ca5e_add_users_table.py  8f951c01403b_remove_unique_usernames.py  e1e7929bebd8_initial_migration.py
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  questions_api.py  quiz.py  user.py
backend/app/core/: config.py
backend/app/crud/: quiz.py
backend/app/db/: __init__.py  base.py  engine.py  init_db.py  session.py  utils.py
backend/app/models/: __init__.py  error.py  question.py  questions.py  quiz.py  user.py
backend/app/schemas/: question.py  quiz.py
backend/app/services/: auth_service.py  questions_services.py  quiz_service.py  user_service.py
backend/app/utils/: responses.py
backend/app/websocket/: __init__.py  handlers.py
backend/tests/: conftest.py  test_auth.py  test_quiz.py  test_user.py
docs/: CONTRIBUTING.md
frontend/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  README.md  components.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/__tests__/: auth-validation.test.tsx  login-form.test.tsx  signup-form.test.tsx  simple.test.tsx
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/: auth.ts
frontend/src/app/login/: page.tsx
frontend/src/app/questions/: page.tsx
frontend/src/app/questions/create/: page.tsx
frontend/src/app/quiz/create/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/auth/: google-login.tsx  login-form.tsx  signup-form.tsx
frontend/src/components/icons/: XIcon.tsx
frontend/src/components/login/: google-login.tsx  login-form.tsx  signup-form.tsx
frontend/src/components/questions/: QuestionsCreateForm.tsx  QuestionsUpdateForm.tsx
frontend/src/components/quiz/: QuizCreateForm.tsx  QuizCreateModal.tsx
frontend/src/components/shared/: Button.tsx  Input.tsx  OptionToggle.tsx  Select.tsx  Textarea.tsx  VisibilityToggle.tsx
frontend/src/components/ui/: OptionToggle.tsx  button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/lib/: socket.ts  validators.ts
frontend/src/types/: auth.ts  user.ts  validators.ts
